# ollama-client

./: .gitignore  LICENSE  README.md  _bug_fix.py  _check_sess.py  _fix_git_tool.py  _test_compact.py  _test_compress.py  pyproject.toml  test_check.py  test_integration.py  test_session.py
cli/: __init__.py  __main__.py  agent_communication.py  api.py  autocomplete.py  compress.py  config.py  config_manager.py  context.py  main.py  menu_extensions.py  multi_agent.py  plan.py  session.py  shortcuts.py  theme.py  tools.py  usage.py
ollama_client/: __init__.py  __main__.py  api.py  cli.py
tests/: test_api.py  test_config.py  test_context.py  test_stores.py  test_tools.py
