[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ollama-client"
version = "1.0.0"
description = "本地 Ollama 模型对接 CLI 工具"
requires-python = ">=3.10"
dependencies = ["requests>=2.31.0", "rich>=13.7.0"]

[project.scripts]
ollama-client = "ollama_client.__main__:main"
